--- a/21_Mache4/style.css
+++ b/21_Mache4/style.css
@@ -59,11 +59,11 @@ header .fa-bars {
   text-align: center;
 }
 
-.about p{
-  transition: .3s;
+.about p {
+  transition: 0.3s;
 }
 
-.about p:hover{
+.about p:hover {
   transform: rotate(180deg);
 }
 
@@ -74,28 +74,32 @@ header .fa-bars {
   margin-top: 60px;
   padding: 15px;
   /* border-radius: 25px; */
-  background-color: #ed145b;
+  background-image: linear-gradient(
+    90deg,
+    rgba(144, 245, 154, 1),
+    rgba(4, 202, 255, 1)
+  );
   font-weight: bold;
   line-height: 1;
   /*transition: background-color 0.5s, color 0.5s;*/
-  transition: .3s;
+  transition: 0.3s;
   transform-origin: bottom center; /* 変形の基準点を変える */
   animation: updown 1s infinite alternate;
 }
 
-.btn span{
+.btn span {
   display: block;
   transform: skewX(-10deg);
 }
 
-.btn:hover{
+.btn:hover {
   color: #ed145b;
   background-color: #fff;
   transform: scale(1.1);
   /* transition: .3s; */
 }
 
-.btn::before{
+.btn::before {
   content: "";
   display: inline-block;
   position: absolute;
@@ -103,46 +107,46 @@ header .fa-bars {
   left: 75px;
   border: 25px solid transparent;
   border-bottom-color: #ed145b;
-  transition: .3s;
+  transition: 0.3s;
   /* animation: updown 1s infinite alternate; */
 }
 
-@keyframes updown{
-  0%{
+@keyframes updown {
+  0% {
     transform: scale(1);
   }
 
-  100%{
+  100% {
     transform: scale(1.2);
   }
 }
 
-.btn:hover::before{
+.btn:hover::before {
   border-bottom-color: #fff;
 }
 
 /* updates */
-.updates{
+.updates {
   margin-bottom: 120px;
 }
 
-.updates article{
+.updates article {
   margin-bottom: 60px;
   background-color: #f4f4f4;
   box-shadow: 1px 1px 15px 0px rgba(0, 0, 0, 0.3);
   text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.4);
 }
 
-.updates .content{
+.updates .content {
   padding: 30px;
 }
 
-.pic{
+.pic {
   position: relative;
   overflow: hidden; /* 要素からはみ出た部分を隠す */
 }
 
-.hot::before{
+.hot::before {
   content: "HOT";
   display: inline-block;
   position: absolute;
@@ -158,32 +162,41 @@ header .fa-bars {
   animation: move 1.5s 5s ease-in infinite alternate;
 }
 
-@keyframes move{
-  0%{
+@keyframes move {
+  0% {
     background-color: #ed145b;
     transform: translateX(0);
   }
 
-  100%{
+  100% {
     background-color: #5a5a5a;
     transform: translateX(100px);
   }
 }
 
-.pic::after{
-  content: "";
+.pic::after {
+  content: "\f002";
+  font-family: "Font Awesome 6 Free";
+  font-weight: 900;
+  color: #fff;
+  font-size: 50px;
   display: block;
   position: absolute;
   top: 97%;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(237, 20, 91, .8);
-  transition: .3s;
+  background-color: rgba(237, 20, 91, 0.8);
+  transition: 0.3s;
   transform: skewY(1deg);
+
+  /* 子要素を上下左右中央に持ってくる */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.pic:hover::after{
+.pic:hover::after {
   top: 0;
   transform: skewY(0);
 }
