--- a/21_Mache4/style.css
+++ b/21_Mache4/style.css
@@ -201,6 +201,16 @@ header .fa-bars {
   transform: skewY(0);
 }
 
+/* 属性セレクタで指定 */
+.contact input[type="text"],
+.contact textarea{
+  width: 500px;
+  padding: 0.8em 0.5em;
+  border: 0;
+  background-color: #ddd;
+  font-size: 16px; /* スマホで操作した時に拡大されるのを防ぐ */
+}
+
 @media (min-width: 640px) {
   .updates .postall {
     display: grid;
